name:                CUTE-parser
version:             0.1.0.0
synopsis:            CUTE Lang parser with Alex and Happy
description:         CUTE Lang parser with Alex and Happy
homepage:            https://github.com/ailrun/CUTE-parser#readme
license:             BSD3
license-file:        LICENSE
author:              Junyoung Clare Jang
maintainer:          jjc9310@gmail.com
copyright:           Copyright, 2016 Junyoung Clare Jang
category:            Web
build-type:          Simple
extra-source-files:  src/Language/CUTE/Parser/Lexer.x
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.CUTE.Parser
                     , Language.CUTE.Parser.Token
                     , Language.CUTE.Parser.LexerHelper
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite CUTE-parser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , CUTE-parser
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ailrun/CUTE-parser
