name:                CUTE-parser
version:             0.1.0.0
cabal-version:       >=1.10
build-type:          Simple
license:             MIT
license-file:        LICENSE
copyright:           (c) 2016-present Junyoung Clare Jang
author:              Junyoung Clare Jang
maintainer:          jjc9310@gmail.com
stability:           alpha
homepage:            https://github.com/ailrun/CUTE-parser#readme
synopsis:            CUTE Lang parser with Alex and Happy
description:         This package includes parser part of CUTE Lang. .x files are Alex files and .y files are Happy files. For more detail, see documentation of Alex and Happy.
category:            Langauge
                   , Parser
extra-doc-files:     README.md

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Language.CUTE.Parser
                     , Language.CUTE.Parser.StringBuffer
                     , Language.CUTE.Parser.ParseM
                     , Language.CUTE.Parser.SrcPos
                     , Language.CUTE.Parser.Token
                     , Language.CUTE.Parser.LexerHelper
                     , Language.CUTE.Parser.Lexer
  build-depends:       base >= 4.7 && < 5
                     , array
                     , bytestring >= 0.10 && < 0.11
                     , utf8-string >= 1 && < 2
  build-tools:         alex
                     , happy

test-suite CUTE-parser-test
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , CUTE-parser

source-repository head
  type:     git
  location: https://github.com/ailrun/CUTE-parser

source-repository this
  type:     git
  location: https://github.com/ailrun/CUTE-parser
  tag:      0.1.0.0
